# knn

./: README.md  chart.html  knn.cabal  stack.yaml
app/: Main.hs
src/: Chart.hs  DataUtil.hs  FScore.hs  HyperParameter.hs  KNN.hs  Strategies.hs
