name:                knn
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            https://github.com/GoPavel/<ml-repo>/tree/master/labs/knn#readme
license:             BSD3
-- license-file:        LICENSE
author:              Golovin Pavel
maintainer:          gopavel0@gmail.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     DataUtil
                       KNN
                       HyperParameter
                       FScore 
                       Chart
                       Strategies

  ghc-options:         -Wall
                       -O3
                       -threaded
-- -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , parallel
                     , cassava
                     , bytestring
                     , vector
                     , containers
                     , statistics
                     , plotlyhs, lucid, text, microlens
                     , hmatrix
                     , terminal-progress-bar
  default-language:    Haskell2010

executable knn
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N"
  default-language:    Haskell2010
  build-depends:       base
                     , knn
                     , vector

